<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginEnd="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_from"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:textSize="12sp"
        android:textColor="@color/secondary_text"/>

    <Spinner
        android:id="@+id/spinner_units"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_quantity"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="12sp"
        android:textColor="@color/secondary_text"/>

    <EditText
        android:id="@+id/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        android:paddingBottom="16dp"/>

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:visibility="invisible"
        android:textSize="12sp"
        android:textColor="@color/secondary_text"/>

</LinearLayout>