<resources>
    <string name="app_name">Converter</string>
    <string name="label_spin_convert_from">Convert from:</string>
    <string name="label_edit_text_quantity">In quantity:</string>
    <string name="label_rw_result">Result:</string>
    <string name="title_fragment_settings">Settings</string>
    <string name="title_fragment_edit">Edit</string>
    <string name="pref_title_customize">Customize converters</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_summary_language">Change the application language</string>
    <string name="pref_dialog_title_language">Select language</string>
    <string name="pref_title_precision">Precision</string>
    <string name="pref_dialog_message_precision">The number of decimal digits:</string>
    <string name="pref_title_grouping_size">Grouping size</string>
    <string name="pref_dialog_message_grouping_size">The amount of numbers in groups:</string>
    <string name="pref_title_standard_form">Standard form</string>
    <string name="pref_summary_standard_form">Show conversion result in standard form</string>
    <string name="pref_title_default_form">Default form</string>
    <string name="pref_summary_default_form">Show conversion result without any formatting</string>
    <string name="pref_summary_grouping_size">digits</string>
    <string name="pref_summary_precision">decimal digits</string>
    <string name="app_language">English</string>
    <string name="msg_no_converters">There are no enabled converters.</string>
    <string name="msg_delete_converter">Are you sure want to delete this converter:</string>
    <string name="label_converter_name">Converter name:</string>
    <string name="label_units">Units:</string>
    <string name="hint_converter_name">Input converter name</string>
    <string name="hint_unit_name">Input unit name</string>
    <string name="hint_unit_value">Input unit value</string>
    <string name="msg_converter_exist">The converter with the same name already exist.</string>
    <string name="msg_loading">Loading units…</string>
    <string name="msg_delete_all_units">Can not remove all units. At least two units should be present in the converter. You can delete entire converter.</string>
    <string name="label_unit_name">Unit name:</string>
    <string name="label_unit_value">Unit value:</string>
    <string name="title_dialog_edit_unit">Edit unit</string>
    <string name="hint_unit_name_et">Unit name</string>
    <string name="hint_unit_value_et">Unit value</string>
    <string name="msg_unit_exist">The unit with the same name already exist.</string>
    <string name="title_btn_save">Save</string>
    <string name="hint_create_units">Create at least two units.</string>
    <string name="title_saving_dialog">Saving…</string>
    <string name="msg_save_changes">Save changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>
    <string name="later">Later</string>
    <string name="hint_number">Input number</string>
    <string name="copy">COPY</string>
    <string name="title_btn_update">Update</string>
    <string name="msg_internet_error">Currency rates not loaded. Check the internet connection and try again.</string>
    <string name="msg_old_data">Exchange rates may be outdated. Swipe down to refresh.</string>
    <string name="msg_restart">To apply this setting restart the app please!</string>
</resources>
